--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	
 	  ga('create', 'UA-85747885-1', 'auto');
 	  ga('send', 'pageview');
-	
     </script>
+
+      <script src="assets/configuration.js"></script>
   </head>
   <body id="body">
     <div class="se-pre-con"></div>
