--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a class="scrollto" href="#welcome">Welcome</a></li>
-            <li><a class="scrollto" href="#ceremony">Ceremony</a></li>
+            <li class="active"><a class="scrollto" href="#welcome">Bienvenue</a></li>
+            <li><a class="scrollto" href="#ceremony">Cérémonie</a></li>
             <li><a class="scrollto" href="#story">Our Story</a></li>
             <li><a class="scrollto" href="#gallery">Gallery</a></li>
             <li><a class="scrollto" href="#registries">Registries</a></li>
@@ -89,16 +89,16 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="intro-content">
-          <div class="title text-center">The Wedding Ceremony of</div>
+          <div class="title text-center">Le mariage de</div>
           <div class="brand text-center">
-            <h1 class="wow fadeInDown">Jayden</h1>
+            <h1 class="wow fadeInDown">Julie</h1>
             <div class="heart">
               <i class="fa fa-heart" aria-hidden="true"></i>
             </div>
-            <h1 class="wow fadeInDown">Marian</h1>
+            <h1 class="wow fadeInDown">Victor</h1>
           </div><!-- brand -->
-          <div class="location text-center">New York</div>
-          <div class="date text-center">09 . 12 . 2017</div>
+          <div class="location text-center">Châtel-Saint-Germain</div>
+          <div class="date text-center">Samedi 7 octobre 2017</div>
         </div><!-- intro-content -->
       </div><!-- container -->
     </header>
@@ -108,14 +108,14 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="parents text-center wow fadeIn">
-              <div class="title">Parents of the Groom</div>
-              <h3>Mr. and Mrs. Smith</h3>
+              <div class="title">Parents de la mariée</div>
+              <h3>Brigitte et Marcel MAYOT</h3>
             </div><!-- parents -->
           </div><!-- col 4 -->
           <div class="col-md-6 col-sm-6">
             <div class="parents text-center wow fadeIn">
-              <div class="title">Parents of the Bride</div>
-              <h3>Mr. and Mrs. Brown</h3>
+              <div class="title">Parents du marié</div>
+              <h3>Christiane et Philippe BRET</h3>
             </div><!-- parents -->
           </div><!-- col 4 -->
         </div><!-- row -->
@@ -138,8 +138,8 @@
           <div class="col-md-6">
             <div class="media media-about wow fadeInRight">
               <div class="media-body text-right">
-                <div class="title">The Groom</div>
-                <h2 class="media-heading">Jayden Smith</h2>
+                <div class="title">La mariée</div>
+                <h2 class="media-heading">Julie Mayot</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
@@ -154,8 +154,8 @@
                 <img class="media-object" src="assets/img/bride.jpg" alt="...">
               </div>
               <div class="media-body">
-                <div class="title">The Bride</div>
-                <h2 class="media-heading">Marian Brown</h2>
+                <div class="title">Le marié</div>
+                <h2 class="media-heading">Victor Bret</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
