--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand visible-xs" href="#">Lovin</a>
+          <a class="navbar-brand visible-xs" href="#">Julia & Victor</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,8 +74,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a class="scrollto" href="#welcome">Bienvenue</a></li>
             <li><a class="scrollto" href="#ceremony">Cérémonie</a></li>
-            <li><a class="scrollto" href="#story">Our Story</a></li>
-            <li><a class="scrollto" href="#gallery">Gallery</a></li>
+            <li><a class="scrollto" href="#info">Infos pratiques</a></li>
+            <li><a class="scrollto" href="#story">Notre histoire</a></li>
+            <li><a class="scrollto" href="#gallery">Gallerie</a></li>
             <li><a class="scrollto" href="#registries">Registries</a></li>
             <li><a class="scrollto" href="#contact">Contact</a></li>
             <li><a class="scrollto" href="#rsvp">RSVP</a></li>
@@ -126,7 +127,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            We Cordially invite you to the wedding ceremony
+            Vous invite cordialement à notre soirée de mariage
           </div>
         </div>
       </div>
@@ -165,26 +166,46 @@
       </div><!-- container -->
     </div><!-- section -->
 
-    <div class="section section-dates parallax-window" id="ceremony" data-parallax="scroll" data-image-src="assets/img/dates-bg.jpg">
+    <div class="section section-dates parallax-window" id="ceremony" data-parallax="scroll" data-image-src="assets/img/frise.jpg">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="dates-info wow fadeIn">
-              <div class="ceremony">Wedding</div>
-              <div class="location">New York</div>
-              <div class="day-month">09 Dec</div>
-              <div class="year">Two Thousand and seventeen</div>
-              <div class="time">5:00PM</div>
+              <div class="ceremony">Mariage civil</div>
+              <div class="location">9 Rue Jeanne d'Arc 57140 Plesnois</div>
+              <div class="day-month">7 oct. 2017</div>
+              <!--<div class="year">59 Rue Jeanne d'Arc 57140 Plesnois</div>-->
+              <div class="time">à 17h</div>
             </div><!-- dates info -->
           </div><!-- col 6 -->
           <div class="col-md-6 col-sm-6">
             <div class="dates-info wow fadeIn">
-              <div class="ceremony">Reception</div>
-              <div class="location">Los Angeles</div>
-              <div class="day-month">15 Jan</div>
-              <div class="year">Two Thousand and seventeen</div>
-              <div class="time">6:30PM</div>
+              <div class="ceremony ceremony">Cérémonie laïque</div>
+              <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
+              <div class="day-month">7 oct. 2017</div>
+              <!--<div class="year">Two Thousand and seventeen</div>-->
+              <div class="time">à 17h</div>
+            </div><!-- dates info -->
+          </div><!-- col 6 -->
+        </div><!-- row -->
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <div class="dates-info wow fadeIn">
+              <div class="ceremony ceremony">Vin d'honneur & Diner</div>
+              <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
+              <div class="day-month">7 oct. 2017</div>
+              <!--<div class="year">Two Thousand and seventeen</div>-->
+              <div class="time">à 17h</div>
+            </div><!-- dates info -->
+          </div><!-- col 6 -->
+          <div class="col-md-6 col-sm-6">
+            <div class="dates-info wow fadeIn">
+              <div class="ceremony ceremony">Brunch</div>
+              <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
+              <div class="day-month">7 oct. 2017</div>
+              <!--<div class="year">Two Thousand and seventeen</div>-->
+              <div class="time">à 17h</div>
             </div><!-- dates info -->
           </div><!-- col 6 -->
         </div><!-- row -->
@@ -193,7 +214,7 @@
 
     <div class="section section-story" id="story">
       <div class="container">
-        <h1 class="text-center wow fadeInDown">Our Story</h1>
+        <h1 class="text-center wow fadeInDown">Notre histoire</h1>
         <div class="sub-title text-center wow fadeInDown">It was raining when we first met each other</div>
         <p class="text-center wow fadeIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -210,7 +231,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="wow fadeInDown">Gallery</h1>
+            <h1 class="wow fadeInDown">Gallerie</h1>
             <div class="sub-title wow fadeInDown">Moments we have spent togather</div>
           </div>
           <div class="col-md-4 col-sm-6">
@@ -247,30 +268,30 @@
       </div>
     </div><!-- section-gallery -->
 
-    <div class="section section-gift" id="registries">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center wow fadeInDown">Gift registries</h1>
-            <div class="sub-title text-center wow fadeInDown">The most important gift to us is to have you share our day.</div>
-            <p class="text-center wow fadeIn">If you do wish to buy us a gift you can check out the registry lists below. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident.</p>
-          </div><!-- col-12 -->
-          <div class="gift-partner">
-            <div class="col-md-4 col-sm-4 col-xs-6 wow fadeInUp">
-              <a href="#"><img src="assets/img/amazon.png" class="img-responsive"></a>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-6 wow fadeInDown">
-              <a href="#"><img src="assets/img/bed-bath-beyond.png" class="img-responsive"></a>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInUp">
-              <a href="#"><img src="assets/img/planet-eves.png" class="img-responsive"></a>
-            </div>
-          </div><!-- gift partner -->
-        </div><!-- row -->
-      </div><!-- container -->
-    </div><!-- section-gift -->
+    <!--<div class="section section-gift" id="registries">-->
+      <!--<div class="container">-->
+        <!--<div class="row">-->
+          <!--<div class="col-md-12">-->
+            <!--<h1 class="text-center wow fadeInDown">Gift registries</h1>-->
+            <!--<div class="sub-title text-center wow fadeInDown">The most important gift to us is to have you share our day.</div>-->
+            <!--<p class="text-center wow fadeIn">If you do wish to buy us a gift you can check out the registry lists below. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse-->
+            <!--cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non-->
+            <!--proident.</p>-->
+          <!--</div>&lt;!&ndash; col-12 &ndash;&gt;-->
+          <!--<div class="gift-partner">-->
+            <!--<div class="col-md-4 col-sm-4 col-xs-6 wow fadeInUp">-->
+              <!--<a href="#"><img src="assets/img/amazon.png" class="img-responsive"></a>-->
+            <!--</div>-->
+            <!--<div class="col-md-4 col-sm-4 col-xs-6 wow fadeInDown">-->
+              <!--<a href="#"><img src="assets/img/bed-bath-beyond.png" class="img-responsive"></a>-->
+            <!--</div>-->
+            <!--<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInUp">-->
+              <!--<a href="#"><img src="assets/img/planet-eves.png" class="img-responsive"></a>-->
+            <!--</div>-->
+          <!--</div>&lt;!&ndash; gift partner &ndash;&gt;-->
+        <!--</div>&lt;!&ndash; row &ndash;&gt;-->
+      <!--</div>&lt;!&ndash; container &ndash;&gt;-->
+    <!--</div>&lt;!&ndash; section-gift &ndash;&gt;-->
 
     <!-- Maps Section -->
     <div class="section section-map" id="map"> 
@@ -300,16 +321,16 @@
           <div class="col-md-12">
             <h1 class="text-center wow fadeInDown">Nous contacter</h1>
             <p class="text-center wow fadeIn">
-              Julie MAYOT / 06.89.76.67.39 / juliemayot@hotmail.fr<br>
-              Victor BRET / 06.75.17.93.43 / vic.bret@yahoo.fr
+              <strong>Julie MAYOT</strong> / 06.89.76.67.39 / juliemayot@hotmail.fr<br>
+              <strong>Victor BRET</strong> / 06.75.17.93.43 / vic.bret@yahoo.fr
             </p>
             <h2 class="text-center wow fadeIn">Equipe d’organisation :</h2>
             <p class="text-center wow fadeIn">
-              Olivier-Charles GANZER / ganzeroc@gmail.com<br>
-              Bérengère HUSSON / lamouchedu92@hotmail.fr<br>
-              Antoine MOLLE / antoine_mp@hotmail.fr<br>
-              Pauline MAISONNASSE / mezopopo@hotmail.com<br>
-              Laura ZELMANSKI / lzelmanski@yahoo.fr<br>
+              <strong>Olivier-Charles GANZER</strong> / ganzeroc@gmail.com<br>
+              <strong>Bérengère HUSSON</strong> / lamouchedu92@hotmail.fr<br>
+              <strong>Antoine MOLLE</strong> / antoine_mp@hotmail.fr<br>
+              <strong>Pauline MAISONNASSE</strong> / mezopopo@hotmail.com<br>
+              <strong>Laura ZELMANSKI</strong> / lzelmanski@yahoo.fr<br>
             </p>
             <hr>
             <p class="text-center wow fadeIn"><strong>N'oubliez pas de remplir le formulaire ci-dessous pour nous faire part de votre réponse</strong>.</p>
@@ -398,7 +419,7 @@
 
     <div class="footer">
       <div class="container text-center">
-        <p>&copy; 2017 - Lovin theme - Designed by <a href="#">Webmaddy</a></p> 
+        <p>&copy; 2017 - Mariage de Julie & Victor - Réalisé par <a href="https://github.com/mbret">Maxime Bret</a></p>
       </div><!-- container -->
     </div><!-- footer -->
 
@@ -429,6 +450,5 @@
     <script src="assets/plugins/jquery-validation-1.15.0/dist/jquery.validate.min.js"></script>
     <script src="assets/plugins/sscr.js"></script>
     <script src="assets/js/default.js"></script>
-    <script src="assets/js/contact.js"></script>
   </body>
 </html>
