--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            Vous invite cordialement à notre soirée de mariage
+              Vous invitent à fêter leur mariage
           </div>
         </div>
       </div>
