--- a/index.html
+++ b/index.html
@@ -349,12 +349,12 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Prénom et nom</label>
+                    <label>Prénom et Nom</label>
                     <input type="text" name="guestName" id="guestName" class="form-control">
                   </div>
                 </div><!-- col 6 -->
                 <div class="col-md-12">
-                  <div class="checkbox"> <label> <input type="checkbox" name="guestName" id="present" checked> Je serais présent </label> </div>
+                  <div class="checkbox"> <label> <input type="checkbox" name="guestName" id="present" checked> Je serais présent(e) </label> </div>
                   <div class="form-group">
                   </div>
                 </div><!-- col 6 -->
@@ -362,22 +362,22 @@
                   <div class="form-group">
                     <label>Viendras-tu</label><br>
                     <label class="checkbox-inline">
-                      <input type="radio" name="alone" value="alone"> Seul
+                      <input type="radio" name="alone" value="alone"> Seul(e)
                     </label>
                     <label class="checkbox-inline">
-                      <input type="radio" name="alone" value="together"> Accompagné
+                      <input type="radio" name="alone" value="together"> Accompagné(e)
                     </label>
                   </div>
                 </div><!-- col 6 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Prénom et nom du conjoint / du(es) enfant(s)</label>
+                    <label>Prénom et Nom du conjoint / du(es) enfant(s)</label>
                     <input type="text" name="conjointName" id="conjointName" class="form-control">
                   </div>
                 </div><!-- col 6 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Intéressé par du covoiturage vers la Lorraine ? (Dates et lieu de départ)</label>
+                    <label>Intéressé(e) par du covoiturage vers la Lorraine ? (Dates et lieu de départ)</label>
                     <input type="text" name="carpooling" id="carpooling" class="form-control">
                   </div>
                 </div><!-- col 6 -->
@@ -400,7 +400,7 @@
                 </div><!-- col 12 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label for="guestMessage">Message</label>
+                    <label for="guestMessage">Vous avez des questions ? Des suggestions ?</label>
                     <textarea name="guestMessage" id="guestMessage" class="form-control"></textarea>
                   </div>
                 </div><!-- col 12 -->
