--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
             <li><a class="scrollto" href="#info">Infos pratiques</a></li>
             <li><a class="scrollto" href="#story">Notre histoire</a></li>
             <li><a class="scrollto" href="#gallery">Gallerie</a></li>
-            <li><a class="scrollto" href="#registries">Registries</a></li>
             <li><a class="scrollto" href="#contact">Contact</a></li>
             <li><a class="scrollto" href="#rsvp">RSVP</a></li>
           </ul>
@@ -268,31 +267,6 @@
       </div>
     </div><!-- section-gallery -->
 
-    <!--<div class="section section-gift" id="registries">-->
-      <!--<div class="container">-->
-        <!--<div class="row">-->
-          <!--<div class="col-md-12">-->
-            <!--<h1 class="text-center wow fadeInDown">Gift registries</h1>-->
-            <!--<div class="sub-title text-center wow fadeInDown">The most important gift to us is to have you share our day.</div>-->
-            <!--<p class="text-center wow fadeIn">If you do wish to buy us a gift you can check out the registry lists below. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse-->
-            <!--cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non-->
-            <!--proident.</p>-->
-          <!--</div>&lt;!&ndash; col-12 &ndash;&gt;-->
-          <!--<div class="gift-partner">-->
-            <!--<div class="col-md-4 col-sm-4 col-xs-6 wow fadeInUp">-->
-              <!--<a href="#"><img src="assets/img/amazon.png" class="img-responsive"></a>-->
-            <!--</div>-->
-            <!--<div class="col-md-4 col-sm-4 col-xs-6 wow fadeInDown">-->
-              <!--<a href="#"><img src="assets/img/bed-bath-beyond.png" class="img-responsive"></a>-->
-            <!--</div>-->
-            <!--<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInUp">-->
-              <!--<a href="#"><img src="assets/img/planet-eves.png" class="img-responsive"></a>-->
-            <!--</div>-->
-          <!--</div>&lt;!&ndash; gift partner &ndash;&gt;-->
-        <!--</div>&lt;!&ndash; row &ndash;&gt;-->
-      <!--</div>&lt;!&ndash; container &ndash;&gt;-->
-    <!--</div>&lt;!&ndash; section-gift &ndash;&gt;-->
-
     <!-- Maps Section -->
     <div class="section section-map" id="map"> 
     </div><!-- section-map -->
@@ -344,7 +318,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
           <h1 class="text-center wow fadeInDown">Viendrez-vous ?</h1>
-          <div class="sub-title text-center wow fadeInDown">We look forword to seeing you</div>
+          <div class="sub-title text-center wow fadeInDown">Merci pour votre réponse avant le 1er juillet 2017</div>
             <form id="rsvpForm" class="form wow fadeIn">
               <div class="row">
                 <div class="col-md-12">
