--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <li class="active"><a class="scrollto" href="#welcome">Bienvenue</a></li>
             <li><a class="scrollto" href="#ceremony">Cérémonie</a></li>
             <li><a class="scrollto" href="#info">Infos pratiques</a></li>
-            <li><a class="scrollto" href="#story">Notre histoire</a></li>
-            <li><a class="scrollto" href="#gallery">Gallerie</a></li>
+            <!--<li><a class="scrollto" href="#story">Notre histoire</a></li>-->
+            <!--<li><a class="scrollto" href="#gallery">Gallerie</a></li>-->
             <li><a class="scrollto" href="#contact">Contact</a></li>
             <li><a class="scrollto" href="#rsvp">RSVP</a></li>
           </ul>
@@ -109,13 +109,13 @@
           <div class="col-md-6 col-sm-6">
             <div class="parents text-center wow fadeIn">
               <div class="title">Parents de la mariée</div>
-              <h3>Brigitte et Marcel MAYOT</h3>
+              <h3>Brigitte et Marcel Mayot</h3>
             </div><!-- parents -->
           </div><!-- col 4 -->
           <div class="col-md-6 col-sm-6">
             <div class="parents text-center wow fadeIn">
               <div class="title">Parents du marié</div>
-              <h3>Christiane et Philippe BRET</h3>
+              <h3>Christiane et Philippe Bret</h3>
             </div><!-- parents -->
           </div><!-- col 4 -->
         </div><!-- row -->
@@ -211,61 +211,61 @@
       </div><!-- container -->
     </div><!-- section-dates -->
 
-    <div class="section section-story" id="story">
-      <div class="container">
-        <h1 class="text-center wow fadeInDown">Notre histoire</h1>
-        <div class="sub-title text-center wow fadeInDown">It was raining when we first met each other</div>
-        <p class="text-center wow fadeIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div><!-- container -->
-    </div><!-- section-story -->
+    <!--<div class="section section-story" id="story">-->
+      <!--<div class="container">-->
+        <!--<h1 class="text-center wow fadeInDown">Notre histoire</h1>-->
+        <!--<div class="sub-title text-center wow fadeInDown">It was raining when we first met each other</div>-->
+        <!--<p class="text-center wow fadeIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+        <!--tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,-->
+        <!--quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
+        <!--consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse-->
+        <!--cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non-->
+        <!--proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
+      <!--</div>&lt;!&ndash; container &ndash;&gt;-->
+    <!--</div>&lt;!&ndash; section-story &ndash;&gt;-->
 
     <!-- <div class="section section-gallery parallax-window" id="gallery" data-parallax="scroll" data-image-src="assets/img/gallery-bg.jpg"> -->
-    <div class="section section-gallery" id="gallery" data-parallax="scroll" data-image-src="assets/img/gallery-bg.jpg">
-      <div class="overlay overlay-light"></div>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="wow fadeInDown">Gallerie</h1>
-            <div class="sub-title wow fadeInDown">Moments we have spent togather</div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <a href="assets/img/gallery/img1.jpg" class="photo wow fadeInUp">
-              <img src="assets/img/gallery/img1_thumb.jpg" class="img-responsive">
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <a href="assets/img/gallery/img2.jpg" data-wow-delay="0.5s" class="photo wow fadeInUp">
-              <img src="assets/img/gallery/img2_thumb.jpg" class="img-responsive">
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <a href="assets/img/gallery/img3.jpg" data-wow-delay="1s" class="photo wow fadeInUp">
-              <img src="assets/img/gallery/img3_thumb.jpg" class="img-responsive">
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <a href="assets/img/gallery/img4.jpg" class="photo wow fadeInUp">
-              <img src="assets/img/gallery/img4_thumb.jpg" class="img-responsive">
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <a href="assets/img/gallery/img5.jpg" data-wow-delay="0.5s" class="photo wow fadeInUp">
-              <img src="assets/img/gallery/img5_thumb.jpg" class="img-responsive">
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <a href="assets/img/gallery/img6.jpg" data-wow-delay="1s" class="photo wow fadeInUp">
-              <img src="assets/img/gallery/img6_thumb.jpg" class="img-responsive">
-            </a>
-          </div>
-        </div>
-      </div>
-    </div><!-- section-gallery -->
+    <!--<div class="section section-gallery" id="gallery" data-parallax="scroll" data-image-src="assets/img/gallery-bg.jpg">-->
+      <!--<div class="overlay overlay-light"></div>-->
+      <!--<div class="container text-center">-->
+        <!--<div class="row">-->
+          <!--<div class="col-md-12">-->
+            <!--<h1 class="wow fadeInDown">Gallerie</h1>-->
+            <!--<div class="sub-title wow fadeInDown">Moments we have spent togather</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-4 col-sm-6">-->
+            <!--<a href="assets/img/gallery/img1.jpg" class="photo wow fadeInUp">-->
+              <!--<img src="assets/img/gallery/img1_thumb.jpg" class="img-responsive">-->
+            <!--</a>-->
+          <!--</div>-->
+          <!--<div class="col-md-4 col-sm-6">-->
+            <!--<a href="assets/img/gallery/img2.jpg" data-wow-delay="0.5s" class="photo wow fadeInUp">-->
+              <!--<img src="assets/img/gallery/img2_thumb.jpg" class="img-responsive">-->
+            <!--</a>-->
+          <!--</div>-->
+          <!--<div class="col-md-4 col-sm-6">-->
+            <!--<a href="assets/img/gallery/img3.jpg" data-wow-delay="1s" class="photo wow fadeInUp">-->
+              <!--<img src="assets/img/gallery/img3_thumb.jpg" class="img-responsive">-->
+            <!--</a>-->
+          <!--</div>-->
+          <!--<div class="col-md-4 col-sm-6">-->
+            <!--<a href="assets/img/gallery/img4.jpg" class="photo wow fadeInUp">-->
+              <!--<img src="assets/img/gallery/img4_thumb.jpg" class="img-responsive">-->
+            <!--</a>-->
+          <!--</div>-->
+          <!--<div class="col-md-4 col-sm-6">-->
+            <!--<a href="assets/img/gallery/img5.jpg" data-wow-delay="0.5s" class="photo wow fadeInUp">-->
+              <!--<img src="assets/img/gallery/img5_thumb.jpg" class="img-responsive">-->
+            <!--</a>-->
+          <!--</div>-->
+          <!--<div class="col-md-4 col-sm-6">-->
+            <!--<a href="assets/img/gallery/img6.jpg" data-wow-delay="1s" class="photo wow fadeInUp">-->
+              <!--<img src="assets/img/gallery/img6_thumb.jpg" class="img-responsive">-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>&lt;!&ndash; section-gallery &ndash;&gt;-->
 
     <!-- Maps Section -->
     <div class="section section-map" id="map"> 
