ajotu de la partie loisirs

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li><a class="scrollto" href="#ceremony">Cérémonie</a></li>
             <li><a class="scrollto" href="#info">Infos pratiques</a></li>
             <!--<li><a class="scrollto" href="#story">Notre histoire</a></li>-->
-            <!--<li><a class="scrollto" href="#gallery">Gallerie</a></li>-->
+            <li><a class="scrollto" href="#hobbies">Loisirs</a></li>
             <li><a class="scrollto" href="#contact">Contact</a></li>
             <li><a class="scrollto" href="#rsvp">RSVP</a></li>
           </ul>
@@ -266,6 +266,56 @@
         <!--</div>-->
       <!--</div>-->
     <!--</div>&lt;!&ndash; section-gallery &ndash;&gt;-->
+
+    <div class="section " id="hobbies">
+        <div class="container">
+        <h1 class="text-center wow fadeInDown">Loisirs</h1>
+        <div class="sub-title text-center wow fadeInDown">
+            Si avant ou après notre mariage vous souhaitez profiter plus longtemps des charmes de la région, voici quelques incontournables aux alentours de Metz, ou de Strasbourg
+        </div>
+            <p class="wow fadeIn">
+                A Metz, N’hésitez pas à faire un tour de la ville, en passant notamment par la Cathédrale (bien plus
+                élégante que celle de Strasbourg !), le Temple Protestant, qui offre une des plus belle vues de Metz,
+                le plan d’eau, … . <a href="http://www.tourisme-metz.com/fr/accueil.html">http://www.tourisme-metz.com/fr/accueil.html</a>
+            </p>
+            <p class="wow fadeIn">
+                Pour une virée artistique, vous pourrez également visiter le centre Pompidou :
+                <a href="http://www.centrepompidou-metz.fr/">http://www.centrepompidou-metz.fr/</a>
+            </p>
+            <p class="wow fadeIn">
+                Enfin, pour des moments de détente, ou des visites insolites, vous pourrez vous rendre à Amnéville
+                les Thermes, à 20 minutes de Metz, pour profiter de la Villa Pompéi, du Zoo (un des plus grands
+                d’Europe !) ou encore du Snow Hall ou du Casino. <a href="http://www.amneville.com/">http://www.amneville.com/</a>
+            </p>
+            <p class="wow fadeIn">
+                Songez aussi à poursuivre votre expédition jusqu’à Strasbourg pour découvrir sa Cathédrale (bien
+                plus élégante que celle de Metz !), sa petite France ou encore sa gastronomie !
+                <a href="http://www.otstrasbourg.fr/fr/">http://www.otstrasbourg.fr/fr/</a>
+            </p>
+            <p class="wow fadeIn">
+                Metz et Strasbourg proposent également des activités ludiques, comme les Escape Game (jeux
+                d’évasion) qui ont la faveur des mariés :
+            </p>
+            <dl class="dl-horizontal">
+                <dt>A Metz</dt>
+                <dd>
+                    <a href="http://la-porte- secrete.fr">http://la-porte- secrete.fr</a> (à 50m de l’hôtel Kyriad d’Augny)
+                    <br><a href="http://metz.escapehunt.com">http://metz.escapehunt.com</a>
+                </dd>
+            </dl>
+            <dl class="dl-horizontal">
+                <dt>A Metz</dt>
+                <dd>
+                    <a href="https://www.doozescape.com">https://www.doozescape.com</a> (testé et approuvé !)
+                    <br><a href="http://a-maze- in.com/#home">http://a-maze- in.com/#home</a> (testé et approuvé !)
+                </dd>
+            </dl>
+            <p class="wow fadeIn">
+                Si vous êtes à Strasbourg, vous pouvez aussi traverser la frontière pour vous rendre dans le parc
+                d’attractions le plus connus de la région : Europa Park ! <a href="http://www.europapark.de/fr">http://www.europapark.de/fr</a>
+            </p>
+        </div><!-- container -->
+    </div><!-- section-story -->
 
     <!-- Maps Section -->
     <div class="section section-map" id="map"> 
