--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div><!-- intro-content -->
       </div><!-- container -->
     </header>
-    
+
     <div class="section section-parents">
       <div class="container">
         <div class="row">
@@ -341,7 +341,7 @@
     </div><!-- section-story -->
 
     <!-- Maps Section -->
-    <div class="section section-map" id="map"> 
+    <div class="section section-map" id="map">
     </div><!-- section-map -->
     <!--<script>-->
       <!--function initMap() {-->
@@ -495,6 +495,6 @@
     <script src="assets/plugins/jquery-validation-1.15.0/dist/jquery.validate.min.js"></script>
     <script src="assets/plugins/sscr.js"></script>
     <script src="assets/js/default.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFe7tmKIwQDEW4-_muBXhP8lcJI6QjZKY&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFe7tmKIwQDEW4-_muBXhP8lcJI6QjZKY&callback=initMap" async defer></script>
   </body>
 </html>
